--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
        connect with the livechat agent.
       </p>
 
-      <form action="https://formsubmit.co/csma026@gmail.com" method="POST" class="bg-white p-6 rounded shadow space-y-4">
+      <form action="https://formsubmit.co/el/vevoci" method="POST" class="bg-white p-6 rounded shadow space-y-4">
   <input type="text" name="name" placeholder="Your Name" class="w-full p-2 border rounded" required />
   <input type="email" name="email" placeholder="Your Email" class="w-full p-2 border rounded" required />
   <textarea name="message" placeholder="Your Message" class="w-full p-2 border rounded h-32" required></textarea>
